# rust-exe-packer

./: .gitignore  Cargo.toml
delf/: Cargo.toml
delf/src/: lib.rs  parse.rs
elk/: .gitignore  Cargo.toml
elk/delf/: Cargo.toml
elk/delf/src/: lib.rs
elk/elk/: gdb-elk.py
elk/elk/src/: main.rs  name.rs
elk/samples/: autosym.py  blowstack.asm  bss3.asm  entry_point.c  msg.asm  nolibc.c  stubs.asm
elk/samples/chimera/: .gitignore  Makefile  bar.c  foo.c
elk/samples/echidna/: Cargo.toml  rust-toolchain
elk/samples/echidna/src/: main.rs
elk/samples/glibc-symbols/: .gitignore  tcbhead.c
elk/samples/mapzero/: .gitignore
elk/samples/twothreads/: twothreads.c
elk/samples/what/: Makefile
elk/src/: main.rs  name.rs  process.rs  procfs.rs
minipak/: Cargo.toml  rust-toolchain
minipak/crates/encore/: Cargo.toml
minipak/crates/encore/src/: env.rs  error.rs  fs.rs  items.rs  lib.rs  memmap.rs  prelude.rs  syscall.rs  utils.rs
minipak/crates/minipak/: Cargo.toml  build.rs
minipak/crates/minipak/src/: cli.rs  error.rs  main.rs
minipak/crates/pixie/: Cargo.toml
minipak/crates/pixie/src/: launch.rs  lib.rs  manifest.rs  writer.rs
minipak/crates/pixie/src/format/: dynamic.rs  header.rs  mod.rs  prelude.rs  program_header.rs  rela.rs  sym.rs
minipak/crates/stage1/: Cargo.toml
minipak/crates/stage1/src/: lib.rs  main.rs
minipak/crates/stage2/: Cargo.toml  build.rs
minipak/crates/stage2/src/: lib.rs
minipak/samples/: .gitignore
minipak/samples/hello-pie/: .gitignore  Tupfile  hello-pie.c
minipak/samples/loadtest/: .gitignore  Tupfile  loadtest.c
samples/: bss.asm  bss2.asm  entry_point.c  hello-dl.asm  hello-nolibc.c  hello-pie.asm  hello.asm  ifunc-nolibc.c  nodata.asm  puts.c
samples/chimera/: chimera.c
samples/echidna/: Cargo.toml
samples/echidna/src/: main.rs  support.rs
samples/glibc-symbols/: Makefile
samples/mapzero/: Makefile  mapzero.c
samples/twothreads/: .gitignore  Makefile
samples/what/: .gitignore  what.c
