[package]
name = "elk"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
custom_debug_derive = "0.5.0"
delf = { path = "../delf" }
mmap = "0.1.1"
region = "2"
thiserror = "1"
