[package]
name = "delf"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
derive-try-from-primitive = "1"
doc-comment = "0.3.3"
nom = "5"
enumflags2 = "0.6"
thiserror = "1"
