[package]
name = "encore"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
compiler_builtins = "0.1.40"
displaydoc = { version = "0.2.1", default-features = false }
linked_list_allocator = "0.8.11"
rlibc = "1.0.0"
