[package]
name = "pixie"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encore = { path = "../encore"}
deku = { version = "0.11.0", default-features = false, features = ["alloc"] }
derivative = { version = "2.2.0", features = ["use_core"] }
displaydoc = { version = "0.2.1", default-features = false }
